HAPPINESS 101: fixed previous button alignment

--- a/wp-content/themes/delivering-happiness/assets/sass/global/_components.scss
+++ b/wp-content/themes/delivering-happiness/assets/sass/global/_components.scss
@@ -739,6 +739,10 @@ td{
         @extend %pull-left;
     }
 }
+.paging-navigation a{
+    margin: 0;
+
+}
 
 .post-navigation {
     .nav-previous {
